--- a/pewds.css
+++ b/pewds.css
@@ -4,9 +4,10 @@ h3{
 
 body{
 	background-image: url(60.jpg);
-  text-align: center;
+  	text-align: center;
 	color: white;
 	overflow: hidden;
+	margin: 0%;
 }
 
 nav ul {
@@ -32,12 +33,25 @@ nav ul li a{
 	position: relative;
 	margin: 0;
 	padding: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 
 
 img {
-  max-width: 100vw !important;
+  width: 100;
 } 
 
+@media (min-width: 600px){
+	.container{
+		width: 80%;
+		height: 100%
+	}
+}
+
+@media (min-width: 1280px){
+	.container{
+		width: 75%;
+		height: 100%;
+	}
+}
