--- a/pewds.css
+++ b/pewds.css
@@ -10,21 +10,37 @@ body{
 	margin: 0%;
 }
 
-nav ul {
-	border-radius: 2px;
-	background: black;
+nav {
+    width: 100%;
+    margin-top: 5%;
+    margin-bottom:3%;
+	text-align: center;
 }
 
-nav ul li{
-	position: left;
-	display: inline-block;
+nav ul li {
+    list-style-type: none;
+    display: inline;
 }
 
-nav ul li a{
-	text-decoration: none;
-	color: white;
-	text-align: right;
+nav ul li a {
+    font-family: calibri;
+    font-size: 1.1em;
+    text-decoration: none;
+    color: white;
+    border-bottom: solid 1px rgb(0, 0, 0);
+    margin: 1%;
+    background-color: transparent;
+    padding: 2%;
+	padding-top: 2%;
 }
+
+nav ul li a:hover {
+    border-bottom: solid pink;
+    color: pink; 
+}
+
+
+/* CONTAINER - MAIN PAGE CONTENT */
 
 .container {
 	background: black;
