--- a/pewds.css
+++ b/pewds.css
@@ -11,13 +11,18 @@ body{
 	margin: 0%;
 }
 
+.banner{
+	margin:0;
+}
+
 /* NAVIGATION */
 
 nav {
-    width: 100%;
+	width: 100%;
     margin-top: 3%;
     margin-bottom:3%;
 	text-align: center;
+	text-transform: uppercase;
 }
 
 nav ul li {
@@ -73,15 +78,22 @@ footer{
 }
 
 @media (min-width: 600px){
+	nav{
+		font-size: 1em;
+	}
+
 	.container{
 		width: 80%;
 		height: auto;
+		border: 6px solid black;
 	}
 }
 
 @media (min-width: 1280px){
+
 	.container{
 		width: 75%;
 		height: auto;
+		border: 6px solid black;
 	}
 }
