--- a/print.css
+++ b/print.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 .container {
-    width: 1170px;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -32,7 +32,9 @@ header {
     height: 80px;
 }
 .section_row_main { height: 350px; }
+
 .section_row_1 { height: 520px; }
+
 /* Banner */
 .jumbotron {
     background-image: url("https://images.pexels.com/photos/1532621/pexels-photo-1532621.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
@@ -60,6 +62,17 @@ header {
     float: left;
 }
 
+
+.review{
+    width: 100%;
+    text-align: center;
+}
+
+.review-content figure img{
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+}
 /* 
 .container-main {
 	display: grid;
@@ -118,9 +131,9 @@ header {
       margin: 1.5em;
   } */
 
-/* .informative{
+ /* .informative{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-} */
+}  */
 
 
 .section_row_1 figure {
@@ -166,6 +179,7 @@ nav {
 
 nav ul {
     float: right;
+    padding: 1%;
 }
 
 nav ul li {
@@ -243,6 +257,15 @@ nav ul li a {
         margin: 0.3em;
     }
 
+    header{
+        width: 100%;
+    }
+
+    .jumbotron {
+        width: 100%;
+        padding: 25%;
+    }
+
     .logo {
         position: absolute;
         top: 0;
@@ -310,7 +333,7 @@ nav ul li a {
     .nav-btn {
         position: fixed;
         right: 10px;
-        top: 10px;
+        top: 14px;
         display: block;
         width: 48px;
         height: 48px;
@@ -341,22 +364,76 @@ nav ul li a {
         margin-top: 4px;
     }
 
-    .container-main {
-        display: grid;
-        grid-template-areas:
-            "navigation navigation"
-            "text text"
-            "image image";
-        grid-template-columns: 1fr;
+.container{
+    width: 90%;
+    margin: 0 auto;
+}
+
+
+.section_row_1{
+    height: auto;
+}
+
+.section_row_main{
+    height: auto;
+}
+
+.main,
+.side {
+    width: 100%;
+    float: left;
+    margin:0;
+}
+
+.side figure{
+    margin: 0;
+}
+
+.informative {
+    width: 100%;
+    float: left;
+}
+    
+.informative figure{
+    margin:0;
+}
+
+  .jumbotron-fixed {
+        width: 100%;
+        height: 50%;
+        display: inline-block;
+        padding: 25%;
     }
 
-    .content {
-        display: grid;
-        grid-template-areas:
-            "firstbox"
-            "secondbox"
-            "thirdbox";
-        grid-template-columns: 1fr;
+
+    .info img {
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        position: absolute;
+        max-width: none;
+        height: 80%;
+    }
+   
+    
+
+}
+
+@media screen and (max-width: 1024px) {
+
+    .section_row_1 figure {
+        position: relative;
+        overflow: hidden;
+        height: 260px;
+    }
+    
+    .info img {
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        position: absolute;
+        max-width: none;
+        height: 50%;
     }
 
 }
